Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -218,6 +218,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   display: block;
   float: left;
   padding: 20px 0px 18px;
+  width: 25%;
 }
 
 /* COMPANY NAME */
@@ -284,7 +285,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 700px;
+  width: 75%;
   margin: 20px 0;
 }
 
@@ -293,7 +294,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0;
   padding: 0;
 }
